--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <!-- banner -->
     <section class="banner">
-        <img src="resources/images/banner.jpg" alt="">
+        <div class="image-container">
+            <img src="resources/images/banner.jpg" alt="">
+        </div>
         <div class="text">
             <h1>Learn something new everyday</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -39,5 +41,101 @@
             </div>
         </div>
     </section>
+
+    <!-- content -->
+    <section class="content">
+        <div class="desktop left">
+            <img src="resources/images/information-main.jpg" alt="">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>"Curabitur vitaae libero in ipsum porttior consequat. Aliquam et commidi lectus, nex cinsequat neque. Sed nom accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <h4>Emanuel, Sr Strategist at Hiring.com</h4>
+        </div>
+        <div class="right">
+            <div class="content-banner">
+                <img class="desktop" src="resources/images/information-orientation.jpg" alt="">
+                <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt="">
+                <div class="banner-text">
+                    <h3>Orientation date</h3>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <a href="#"><span class="read-more">Read more</span></a>
+                </div>
+            </div>
+            <div class="content-banner">
+                <img class="desktop" src="resources/images/information-campus.jpg" alt="">
+                <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt="">
+                <div class="banner-text">
+                    <h3>Our campus</h3>
+                    <p>Find which campus is close by you</p>
+                    <a href="#"><span class="read-more">Read more</span></a>
+                </div>
+            </div>
+            <div class="content-banner">
+                <img class="desktop" src="resources/images/information-guest-lecture.jpg" alt="">
+                <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt="">
+                <div class="banner-text">
+                    <h3>Our guest lecture</h3>
+                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                    <a href="#"><span class="read-more">Read more</span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- learning -->
+    <section class="learning">
+        <h1>Start learning</h1>
+        <div class="hero-group1">
+            <div class="desktop hero">
+                <img src="resources/images/course-software.jpg" alt="">
+                <h3>Software engineering</h3>
+                <span>COURSES</span>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="desktop hero">
+                <img src="resources/images/course-computer-art.jpg" alt="">
+                <h3>Computer art</h3>
+                <span>COURSES</span>
+                <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+            <div class="desktop hero">
+                <img src="resources/images/course-design.jpg" alt="">
+                <h3>Design</h3>
+                <span>COURSES</span>
+                <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+        </div>
+        <div class="hero-group2">
+            <div class="desktop hero">
+                <img src="resources/images/course-data.jpg" alt="">
+                <h3>Data</h3>
+                <span>COURSES</span>
+                <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+            <div class="desktop hero">
+                <img src="resources/images/course-business.jpg" alt="">
+                <h3>Business</h3>
+                <span>COURSES</span>
+                <p>Product Development, Business Development, Startup</p>
+            </div>
+            <div class="desktop hero">
+                <img src="resources/images/course-marketing.jpg" alt="">
+                <h3>Marketing</h3>
+                <span>COURSES</span>
+                <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+        </div>
+        <div class="mobile">
+            <h3>Software engineering</h3>
+            <h3>Computer art</h3>
+            <h3>Design</h3>
+            <h3>Data</h3>
+            <h3>Business</h3>
+            <h3>Marketing</h3>
+        </div>
+    </section>
+    <!-- exhibit -->
+
+    <!-- footer -->
+
 </body>
 </html>
