--- a/index.html
+++ b/index.html
@@ -133,9 +133,42 @@
             <h3>Marketing</h3>
         </div>
     </section>
+
     <!-- exhibit -->
+    <section class="exhibit">
+        <h1>Thesis exhibit</h1>
+        <div class="main">
+            <div class="video-container">
+                <video src="resources/videos/thesis.mp4" controls></video>
+                <h3 class="desktop">Reimagine urban</h3>
+                <p class="desktop">"Curabitur vitaae libero in ipsum porttior consequat. Aliquam et commidi lectus, nex cinsequat neque. Sed nom accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            </div>
+            <div class="desktop right">
+                <div class="exhibit-banner">
+                    <img src="resources/images/thesis-fisma.jpg" alt="">
+                    <div class="text">
+                        <h3>Fisma: Design and Prototype</h3>
+                        <p>Designer showcase of new prototype product</p>
+                    </div>
+                </div>
+                <div class="exhibit-banner">
+                    <img src="resources/images/thesis-now-and-then.jpg" alt="">
+                    <div class="text">
+                        <h3>Now and then</h3>
+                        <p>Research study about New York</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- footer -->
-
+    <footer>
+        <p>© 2016 Colmar Academy All rights reserved</p>
+        <div class="desktop">
+            <p>Terms</p>
+            <p>Privacy</p>
+        </div>
+    </footer>
 </body>
 </html>
